# raytracer

./: README.md  test.ps1
saved/: basicscene.ppm  redcircle.ppm  yellowshadedsphere.ppm
src/scene/: camera.cpp  camera.h  world.cpp  world.h
src/screen/: canvas.cpp  canvas.h
src/utils/: light.cpp  light.h  math.cpp  math.h  pattern.cpp  pattern.h  ray.cpp  ray.h  shape.cpp  shape.h
test/: CMakeLists.txt  clock_test.cc  math_test.cc  ray_test.cc  rtSphere_test.cc  screen_test.cc  scuffed_test.cc  shape_test.cc  tick.cpp  unit_tests.cc  world_test.cc
test/renders/: first_scene.cc  plane_scene.cc
